--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "ngx-mask": "^11.1.5",
+    "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
+    "three": "^0.128.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
