--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/slider.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/slider.min.js"
+            ]
           },
           "configurations": {
             "production": {
