--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,7 @@
               "src/assets/css/slider.min.css"
             ],
             "scripts": [
-              "src/assets/js/slider.min.js",
-              "src/assets/js/transit-service.min.js",
-              "src/assets/js/horizontal-scroll.min.js"
+              "src/assets/js/slider.min.js"
             ]
           },
           "configurations": {
